pulls card from meeting list into Meeting Card component, bug fix for tab display on mobile vs desktop inside of meetings, switches update meeting to new look

--- a/src/components/Meeting/css.css
+++ b/src/components/Meeting/css.css
@@ -96,4 +96,8 @@
   #pr_id_3_header_0 {
     display: none;
   }
+
+  #pr_id_3_content_0 {
+    display: none;
+  }
 }
